<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_authentication"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:hint="@string/name"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="145dp"
            android:hint="@string/email"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_email"
            android:hint="@string/password"
            android:textSize="30sp"
            android:id="@+id/et_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_in"
                android:layout_weight="1"
                android:id="@+id/btn_sign_in"
                android:onClick="btnSignIn" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:id="@+id/btn_registration"
                android:onClick="btnSignUp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>